Fix Apache config: Move AccessFileName directive to global scope

--- a/docker/000-default.conf
+++ b/docker/000-default.conf
@@ -2,13 +2,13 @@
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/html
     
+    # Enable .htaccess processing (must be at global level)
+    AccessFileName .htaccess
+    
     <Directory /var/www/html>
         Options -Indexes +FollowSymLinks
         AllowOverride All
         Require all granted
-        
-        # Enable .htaccess processing
-        AccessFileName .htaccess
         
         # Security headers
         Header always set X-Content-Type-Options nosniff
