--- a/docker/000-default.conf
+++ b/docker/000-default.conf
@@ -38,10 +38,19 @@
         Require all denied
     </Directory>
     
-    # Allow uploads directory but restrict PHP execution
+    # Allow uploads directory for images only
     <Directory /var/www/html/uploads>
+        Options -Indexes
+        Require all granted
+        
+        # Block PHP execution in uploads
         <FilesMatch "\.php$">
             Require all denied
+        </FilesMatch>
+        
+        # Allow only image files
+        <FilesMatch "\.(jpg|jpeg|png|gif|webp)$">
+            Require all granted
         </FilesMatch>
     </Directory>
     
