--- a/.htaccess
+++ b/.htaccess
@@ -55,21 +55,15 @@ RedirectMatch 404 /controllers/.*
 RedirectMatch 404 /logs/.*
 RedirectMatch 404 /database/.*
 
-# Allow access to uploads directory for images only
-<Directory "/var/www/html/uploads">
-    Options -Indexes
+# Allow image files in uploads directory
+<FilesMatch "^uploads/.*\.(jpg|jpeg|png|gif|webp)$">
     Require all granted
-    
-    # Block PHP execution in uploads
-    <FilesMatch "\.php$">
-        Require all denied
-    </FilesMatch>
-    
-    # Allow only image files
-    <FilesMatch "\.(jpg|jpeg|png|gif|webp)$">
-        Require all granted
-    </FilesMatch>
-</Directory>
+</FilesMatch>
+
+# Block PHP files in uploads directory
+<FilesMatch "^uploads/.*\.php$">
+    Require all denied
+</FilesMatch>
 
 # Block common attack patterns
 # ============================
